--- a/Acembly.Ftx/ui/public/index.html
+++ b/Acembly.Ftx/ui/public/index.html
@@ -22,7 +22,25 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Acembly</title>
+
+    <style media="screen">
+      html, body {
+        -webkit-app-region: drag;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+    
+    <script>
+
+      API                = "%REACT_APP_API%";
+      IS_DEBUG           = "%REACT_APP_IS_DEBUG%";
+
+      if(IS_DEBUG === 'true'){
+        API = 'http://22e62269.ngrok.io/api/'
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
