add cors settings

--- a/Acembly.Ftx/ui/public/index.html
+++ b/Acembly.Ftx/ui/public/index.html
@@ -34,11 +34,11 @@
     
     <script>
 
-      API                = "%REACT_APP_API%";
+      API_URL            = "%REACT_APP_API_URL%";
       IS_DEBUG           = "%REACT_APP_IS_DEBUG%";
 
       if(IS_DEBUG === 'true'){
-        API = 'http://22e62269.ngrok.io/api/'
+        API_URL = 'http://22e62269.ngrok.io/api/'
       }
     </script>
   </head>
