Add env variables fixe

--- a/Acembly.Ftx/ui/public/index.html
+++ b/Acembly.Ftx/ui/public/index.html
@@ -38,7 +38,7 @@
       IS_DEBUG           = "%REACT_APP_IS_DEBUG%";
 
       if(IS_DEBUG === 'true'){
-        API_URL = 'http://22e62269.ngrok.io/api/'
+        API_URL = 'http://22e62269.ngrok.io'
       }
     </script>
   </head>
